Bug 17581 - Loyalty: information alert has too big height

--- a/skins/weborder_mobile/css/main.css
+++ b/skins/weborder_mobile/css/main.css
@@ -154,8 +154,7 @@ textarea, input {
 #popup_container{
     font-size: 1.2em !important;
     max-width: 290px !important;
-    min-width: 100px !important;
-    margin-left: -2px !important;
+    min-width: 160px !important;
 }
 #popup_content {
     background: transparent !important;
